--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "/root/Kuliah/Semester3/KLINIK_HEWAN/lib/mysql-connector-java-8.2.0.jar"
     ],
     "java.debug.settings.onBuildFailureProceed": true
 }
